登录注册demo添加了session判断

--- a/src/main/webapp/WEB-INF/pages/login.html
+++ b/src/main/webapp/WEB-INF/pages/login.html
@@ -13,6 +13,7 @@
                     success:function(data){
                         if(data.result=="success"){
                             alert("\n 欢迎："+data.user.username);
+                            window.location.href="/user/login/welcome";
                         }else{
                             alert("result:"+data.result+"\n message:"+data.message);
                         }
