完成了project_info的增删查改功能 但是，改的功能还没有完成，因为html页面传值没有处理好。

--- a/src/main/webapp/WEB-INF/pages/index/login.html
+++ b/src/main/webapp/WEB-INF/pages/index/login.html
@@ -7,13 +7,12 @@
     <script type="text/javascript">
         $(document).ready(function(){
             $("#btn_login").click(function(){
-                $.ajax("/user/login?json",{
+                $.ajax("/index/login?json",{
                     type:"post",
                     data:$('#login').serialize(),
                     success:function(data){
                         if(data.result=="success"){
-                            alert("\n 欢迎："+data.user.username);
-                            window.location.href="/user/login/welcome";
+                            window.location.href="/login/user/welcome";
                         }else{
                             alert("result:"+data.result+"\n message:"+data.message);
                         }
