--- a/src/main/webapp/WEB-INF/pages/index/index.html
+++ b/src/main/webapp/WEB-INF/pages/index/index.html
@@ -5,7 +5,7 @@
     <title>首页</title>
 </head>
 <body>
-<a href="/user/login">登录</a>
-<a href="/user/register">注册</a>
+<a href="/index/login">登录</a>
+<a href="/index/register">注册</a>
 </body>
 </html>
