--- a/src/main/webapp/WEB-INF/pages/index/register.html
+++ b/src/main/webapp/WEB-INF/pages/index/register.html
@@ -10,12 +10,13 @@
                 var p1 = $("#p1").val();
                 var p2 = $("#p2").val();
                 if(p1 == p2){
-                    $.ajax("/user/register?json",{
+                    $.ajax("/index/register?json",{
                         type:"post",
                         data: $('#register').serialize(),
                         success:function(data){
 
                                 alert("result:"+data.result+"\n message:"+data.message);
+                            window.location.href="/index"
 
                         }
                     });
