在查询用户所有项目的功能上添加了分页功能

--- a/src/main/webapp/WEB-INF/pages/index/index.html
+++ b/src/main/webapp/WEB-INF/pages/index/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
+    <script type="text/javascript">
+    </script>
 </head>
 <body>
-<a href="/index/login">登录</a>
-<a href="/index/register">注册</a>
+<a href="/index/login" id="login">登录</a>
+<a href="/index/register" id="register">注册</a>
 </body>
 </html>
