--- a/src/main/webapp/WEB-INF/pages/login/myIndex.html
+++ b/src/main/webapp/WEB-INF/pages/login/myIndex.html
@@ -6,29 +6,22 @@
     <script type="text/javascript" src="/source/jquery.js"></script>
     <script type="text/javascript">
 
-        function getRootPath(){
-            var strFullPath=window.document.location.href;
-            var strPath=window.document.location.pathname;
-            var pos=strFullPath.indexOf(strPath);
-            var prePath=strFullPath.substring(0,pos);
-            var postPath=strPath.substring(0,strPath.substr(1).indexOf('/')+1);
-            return(prePath+postPath);
-        }
-        var webpath=getRootPath(); //webpath就是目录路径变量
+            function getPage(pageIndex) {
+                $("#mytable").empty();
 
-        alert(webpath);
-
-        $(document).ready(function(){
-            $("#mytable").append("<tr id='title'><th>项目编号</th><th>项目名称</th><th>项目版本</th></tr>");
-            var btn_add="<input type='button' id='btn_add' value='添加'/>";
-            $("#title").append(btn_add);
-            $("#btn_add").click(function(){
-                /*添加的按钮动作*/
-                window.location.href="/login/project/add";
-            });
                 $.ajax("/login/project/list?json",{
                     type:"post",
+                    data:{"pageIndex":pageIndex},
                     success:function(data){
+
+                        $("#mytable").append("<tr id='title'><th>项目编号</th><th>项目名称</th><th>项目版本</th></tr>");
+                        var btn_add="<input type='button' id='btn_add' value='添加'/>";
+                        $("#title").append(btn_add);
+                        $("#btn_add").click(function(){
+                            /*添加的按钮动作*/
+                            window.location.href="/login/project/add";
+                        });
+
                         if(data.result=="success"){
                             for(var i = 0; i < data.projects.length; i++){
                                 var content="<tr id='content'><td>"+data.projects[i].project_info.id+"</td><td>"+data.projects[i].project_info.name+"</td><td>"+data.projects[i].project_info.version+"</td></tr>";
@@ -54,13 +47,45 @@
                                 });
 
                             }
-
-
                         }else{
                             alert("result:"+data.result+"\n message:"+data.message);
                         }
                     }
                 });
+
+            }
+        $(document).ready(function(){
+
+            var index = 0;
+            var count = 0;
+            var maxIndex = 0;
+            $.post("/login/project/count?json","",function(data){
+                if(data.result == "success") {
+                    count = data.count;
+                    maxIndex = count/2;
+                }
+            });
+
+            $("#pre-page").click(function(){
+                index--;
+                if(index>-1) {
+                    getPage(index);
+                }else {
+                    index++;
+                }
+            });
+            $("#next-page").click(function(){
+                index++;
+                if(index< maxIndex) {
+                    getPage(index);
+                }else {
+                    index--;
+                }
+            });
+
+           getPage(index);
+
+
         });
     </script>
 
@@ -71,6 +96,8 @@
     <table id="mytable" border="1">
 
     </table>
+    <input type="button" id="pre-page" value="上一页">
+    <input type="button" id="next-page" value="下一页">
 </form>
 </body>
 </html>
