--- a/src/main/webapp/WEB-INF/pages/login/addProject.html
+++ b/src/main/webapp/WEB-INF/pages/login/addProject.html
@@ -11,6 +11,9 @@
                     type:"post",
                     data:$('#add').serialize(),
                     success:function(data){
+                        if (data.result == "error") {
+                            alert("错误：" + data.message);
+                        }
                         window.location.href="/login/project/list";
                     },
                 })
